force-app/main/default/objects/BLND_DFDT_Linker__c/BLND_DFDT_Linker__c.object-meta.xml
<CustomObject>
    <label>DreamTeam Linker</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Linker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Linkers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>